re PR c++/38485 (GCC can't parse a parenthesized comma in a template-id within a default argument)

PR c++/38485
        * parser.c (cp_parser_token_starts_cast_expression): An EOF
        can't start a cast-expression.

From-SVN: r142815